[gd_scene load_steps=2 format=3 uid="uid://chieycg7xwrst"]

[ext_resource type="Script" path="res://gdscript/gameplay_test_ui.gd" id="1_hu6fl"]

[node name="GameplayTestUI" type="Control"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1
mouse_default_cursor_shape = 2
script = ExtResource("1_hu6fl")

[node name="SceneName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -221.0
offset_bottom = 49.0
grow_horizontal = 0
text = "gameplay_test.tscn
(child) gameplay_test_ui.tscn"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back Button"

[node name="UnloadButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Unload Button"

[node name="ReloadButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Reload Button"

[node name="LoadButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Load Button"

[node name="SaveButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Save Button"

[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VBoxContainer/UnloadButton" to="." method="_on_unload_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ReloadButton" to="." method="_on_reload_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
